fixed the overlapping div

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
     }
   }
   
-  .swap:hover{
+  .swap{
     animation: wheel .6s ease-in;
   }
   @keyframes wheel{
